new proj/src/objects/GE_SM_Audit_History__c.object
<CustomObject>
    <fields>
        <fullName>GE_SM_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_SM_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_SM_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ServiceMax User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GE_SM_Audit_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Audit History</label>
    <nameField>
        <displayFormat>AH-{0000}</displayFormat>
        <label>Audit History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Historys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>